# gmail-agent

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  agent.py  config.py  input.py  output.py  state.py  system_prompt.py
backend/app/db/: supabase_client.py
backend/app/mcp/: __init__.py  client.py  connection.py  server.py
backend/app/models/: draft.py  email.py  persona.py  user.py
backend/app/routers/: auth.py  drafts.py  emails.py  settings.py
backend/app/services/: archive_service.py  auth_service.py  embedding_service.py  gmail_service.py  llm_service.py  modification_service.py  rag_service.py
backend/app/utils/: crypto.py  email_parser.py  prompt_templates.py
backend/tests/: test_agent.py  test_auth.py  test_crypto.py  test_email_parser.py  test_mcp.py  test_models.py  test_prompt_templates.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  drafts.ts  emails.ts  settings.ts
frontend/src/components/: DraftEditor.tsx  EmailList.tsx  EmailThread.tsx
frontend/src/pages/: AuthCallback.tsx  EmailThreadPage.tsx  InboxPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_users.sql  002_full_schema.sql
